Criar método para remover um rapper da lista

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <label>Música referência</label>
         <br>
         <input style="width: 300px;" id="single"/>
+        <button onclick="criar()" type=submit>Salvar</button>
     </div>
     <script src="./index.js"></script>
     
