--- a/index.html
+++ b/index.html
@@ -1,44 +1,59 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rappers</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    <h1>Rappers Vivos</h1>
-    <div id="listaVivos">
-    </div>
+        <h1>Rappers Vivos</h1>
+    <section>
+        <div id="listaVivos">
+        </div>
+    </section>
     <br>
     <br>
     <h1>Rappers Falecidos</h1>
-    <div id="listaMortos"></div>
+    <section>
+        <div id="listaMortos">
+        </div>
+    </section>
+    <br>
     <br>
     <h1>Criar um novo rapper</h1>
-    <div>
-        <label>Foto do rapper</label>
-        <br>
-        <input style="width: 300px;" id="picture"/>
-        <br>
-        <label>Nome do Rapper</label>
-        <br>
-        <input style="width: 300px;" id="name"/>
-        <br>
-        <label>Idade do rapper</label>
-        <br>
-        <input style="width: 300px;" id="age"/>
-        <br>
-        <label>Álbum referência</label>
-        <br>
-        <input style="width: 300px;" id="album"/>
-        <br>
-        <label>Música referência</label>
-        <br>
-        <input style="width: 300px;" id="single"/>
-        <button onclick="createRapper()" type=submit>Salvar</button>
-    </div>
+    <section>
+        <div id="criarNovo">
+            <label>Foto do rapper</label>
+            <br>
+            <input style="width: 300px;" id="picture" />
+            <br>
+            <label>Nome do Rapper</label>
+            <br>
+            <input style="width: 300px;" id="name" />
+            <br>
+            <label>Idade do rapper</label>
+            <br>
+            <input style="width: 300px;" id="age" />
+            <br>
+            <label>Álbum referência</label>
+            <br>
+            <input style="width: 300px;" id="album" />
+            <br>
+            <label>Música referência</label>
+            <br>
+            <input style="width: 300px;" id="single" />
+            <button onclick="createRapper()" type=submit>Salvar</button>
+        </div>
+    </section>
+    <footer>
+        <p>&reg; Zup</p>
+    </footer>
     <script src="./index.js"></script>
-    
+
 </body>
+
 </html>
