--- a/index.html
+++ b/index.html
@@ -31,25 +31,32 @@
             <button onclick="createRapper()" type=submit>Salvar</button>
         </div>
     </section>
-    <h1>Rappers Vivos</h1>
-    <section id="vivos">
-        <div id="listaVivos">
-        </div>
-    </section>
+    <div id="vivos">
+        <h1>Rappers Vivos</h1>
+        <section>
+            <div id="listaVivos">
+            </div>
+        </section>
+    </div>
     <br>
     <br>
-    <h1>Rappers Falecidos</h1>
-    <section id="mortos">
-        <div id="listaMortos">
-        </div>
-    </section>
+    <div id="mortos">
+        <h1>Rappers Falecidos</h1>
+        <section>
+            <div id="listaMortos">
+            </div>
+        </section>
+    </div>
     <br>
     <br>
+
     <div id="marca">
         <footer>
             <p>&reg; Zup</p>
         </footer>
     </div>
+
+
 
     <script src="./index.js"></script>
 
