melhorando o visual da pagina

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rappers</title>
-    <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -15,19 +16,20 @@
         <div id="criarNovo">
             <label>Nome do Rapper</label>
             <br>
-            <input style="width: 300px;" id="name" />
+            <input style="width: 350px;" id="name" />
             <br>
             <label>Idade do rapper</label>
             <br>
-            <input style="width: 300px;" id="age" />
+            <input style="width: 350px;" id="age" />
             <br>
             <label>Álbum referência</label>
             <br>
-            <input style="width: 300px;" id="album" />
+            <input style="width: 350px;" id="album" />
             <br>
             <label>Música referência</label>
             <br>
-            <input style="width: 300px;" id="single" />
+            <input style="width: 350px;" id="single" />
+            <br />
             <button onclick="createRapper()" type=submit>Salvar</button>
         </div>
     </section>
@@ -49,15 +51,11 @@
     </div>
     <br>
     <br>
-
     <div id="marca">
         <footer>
-            <p>&reg; Zup</p>
+            <p>&reg; Zup It Innovation</p>
         </footer>
     </div>
-
-
-
     <script src="./index.js"></script>
 
 </body>
