melhorias no visual da pagina

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <img src="zup.png">
     <h1>Criar um novo rapper</h1>
     <section>
         <div id="criarNovo">
@@ -53,7 +54,7 @@
     <br>
     <div id="marca">
         <footer>
-            <p>&reg; Zup It Innovation</p>
+            <p>&reg; Zup IT Innovation</p>
         </footer>
     </div>
     <script src="./index.js"></script>
