--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             <p>&reg; Zup IT Innovation</p>
         </footer>
     </div>
-    <script src="./index.js"></script>
+    <script src="./index.js">
+    
+    </script>
 
 </body>
 
