alterar type de age

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <br>
             <input style="width: 350px;" id="name" />
             <br>
-            <label>Idade do rapper</label>
+            <label type="number">Idade do rapper</label>
             <br>
-            <input style="width: 350px;" id="age" />
+            <input type="number" style="width: 350px;" id="age" />
             <br>
             <label>Álbum referência</label>
             <br>
